-
Bug
-
Resolution: Done
-
P0: Blocker
-
5.10.0 Alpha
-
None
-
watchOS (clang-multi) on macOS 10.12 (clang-x86_64) - DebugAndRelease, DisableTests
-
4beee1a6dcc1be57aa6fb2a175dadc6ff298545d
https://codereview.qt-project.org/#/c/198461/
https://testresults.qt.io/coin/integration/qt/qt5/tasks/1498414580
https://testresults.qt.io/coin/api/results/qt/qtdeclarative/2a2e55b10f71e1371f89927b135c29d882e36e53/MacOSMacOS_10_12x86_64WatchOSWatchOS_ANYmultiClangqtci-macos-10.12-x86_64-8-718c1fDebugAndRelease_DisableTests/0b261cc4727c72533772105a90a8973dcb08141/build_1498415512/buildlog.txt.gz
... In file included from qquickshapegenericrenderer.cpp:40: ./qquickshapegenericrenderer_p.h:135:9: error: use of undeclared identifier 'QQuickShapeGradientCache'; did you mean 'QQuickShapeGradient'? QQuickShapeGradientCache::GradientDesc fillGradient; ^~~~~~~~~~~~~~~~~~~~~~~~ QQuickShapeGradient ./qquickshape_p.h:65:7: note: 'QQuickShapeGradient' declared here class QQuickShapeGradient : public QQuickGradient ^ /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang++ -c -pipe -stdlib=libc++ -O2 -fPIC -std=c++1z -fapplication-extension -arch armv7k -arch i386 -Xarch_armv7k -mwatchos-version-min=3.0 -Xarch_armv7k -isysroot/Applications/Xcode.app/Contents/Developer/Platforms/WatchOS.platform/Developer/SDKs/WatchOS3.2.sdk -Xarch_i386 -mwatchos-simulator-version-min=3.0 -Xarch_i386 -isysroot/Applications/Xcode.app/Contents/Developer/Platforms/WatchSimulator.platform/Developer/SDKs/WatchSimulator3.2.sdk -fobjc-nonfragile-abi -fobjc-legacy-dispatch -fvisibility=hidden -fvisibility-inlines-hidden -fno-exceptions -fembed-bitcode -Wall -W -fPIC -DQT_COMPILER_SUPPORTS_SSE2 -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_STATICPLUGIN -DQT_PLUGIN -DQT_QML_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -I. -I/Users/qt/work/install/mkspecs/common/uikit -I../../../include/QtQml/5.10.0 -I../../../include/QtQml/5.10.0/QtQml -I../../../include -I../../../include/QtQml -I/Users/qt/work/install/include/QtCore/5.10.0 -I/Users/qt/work/install/include/QtCore/5.10.0/QtCore -I/Users/qt/work/install/include -I/Users/qt/work/install/include/QtNetwork -I/Users/qt/work/install/include/QtCore -I.moc/release -I/Users/qt/work/install/mkspecs/macx-watchos-clang -o .obj/release/plugin.o plugin.cpp In file included from qquickshapegenericrenderer.cpp:40: ./qquickshapegenericrenderer_p.h:135:35: error: no type named 'GradientDesc' in 'QQuickShapeGradient' QQuickShapeGradientCache::GradientDesc fillGradient; ~~~~~~~~~~~~~~~~~~~~~~~~~~^ ./qquickshapegenericrenderer_p.h:220:5: error: use of undeclared identifier 'QQuickShapeGradientCache'; did you mean 'QQuickShapeGradient'? QQuickShapeGradientCache::GradientDesc m_fillGradient; ^~~~~~~~~~~~~~~~~~~~~~~~ QQuickShapeGradient ./qquickshape_p.h:65:7: note: 'QQuickShapeGradient' declared here class QQuickShapeGradient : public QQuickGradient ^ In file included from qquickshapegenericrenderer.cpp:40: ./qquickshapegenericrenderer_p.h:220:31: error: no type named 'GradientDesc' in 'QQuickShapeGradient' QQuickShapeGradientCache::GradientDesc m_fillGradient; ~~~~~~~~~~~~~~~~~~~~~~~~~~^ qquickshapegenericrenderer.cpp:82:5: error: cannot initialize object parameter of type 'QSGBasicGeometryNode' with an expression of type 'QQuickShapeGenericStrokeFillNode' setGeometry(m_geometry); ^~~~~~~~~~~ qquickshapegenericrenderer.cpp:85:5: error: no matching function for call to 'qsgnode_set_description' qsgnode_set_description(this, QLatin1String("stroke-fill")); ^~~~~~~~~~~~~~~~~~~~~~~ ../../../include/QtQuick/../../src/quick/scenegraph/coreapi/qsgnode.h:193:21: note: candidate function not viable: no known conversion from 'QQuickShapeGenericStrokeFillNode *' to 'QSGNode *' for 1st argument void Q_QUICK_EXPORT qsgnode_set_description(QSGNode *node, const QString &description); ^ qquickshapegenericrenderer.cpp:114:9: error: cannot initialize object parameter of type 'const QSGGeometryNode' with an expression of type 'QQuickShapeGenericStrokeFillNode' if (material() != m_material) ^~~~~~~~ qquickshapegenericrenderer.cpp:115:9: error: cannot initialize object parameter of type 'QSGGeometryNode' with an expression of type 'QQuickShapeGenericStrokeFillNode' setMaterial(m_material); ^~~~~~~~~~~ qquickshapegenericrenderer.cpp:524:39: error: cannot initialize a parameter of type 'QSGNode *' with an lvalue of type 'QQuickShapeGenericStrokeFillNode *' node->removeChildNode(node->m_strokeNode); ^~~~~~~~~~~~~~~~~~ ../../../include/QtQuick/../../src/quick/scenegraph/coreapi/qsgnode.h:135:35: note: passing argument to parameter 'node' here void removeChildNode(QSGNode *node); ^ qquickshapegenericrenderer.cpp:525:35: error: cannot initialize a parameter of type 'QSGNode *' with an lvalue of type 'QQuickShapeGenericStrokeFillNode *' node->appendChildNode(node->m_fillNode); ^~~~~~~~~~~~~~~~ ../../../include/QtQuick/../../src/quick/scenegraph/coreapi/qsgnode.h:138:35: note: passing argument to parameter 'node' here void appendChildNode(QSGNode *node); ^ qquickshapegenericrenderer.cpp:527:39: error: cannot initialize a parameter of type 'QSGNode *' with an lvalue of type 'QQuickShapeGenericStrokeFillNode *' node->appendChildNode(node->m_strokeNode); ^~~~~~~~~~~~~~~~~~ ../../../include/QtQuick/../../src/quick/scenegraph/coreapi/qsgnode.h:138:35: note: passing argument to parameter 'node' here void appendChildNode(QSGNode *node); ^ qquickshapegenericrenderer.cpp:536:35: error: cannot initialize a parameter of type 'QSGNode *' with an lvalue of type 'QQuickShapeGenericStrokeFillNode *' node->appendChildNode(node->m_strokeNode); ^~~~~~~~~~~~~~~~~~ ../../../include/QtQuick/../../src/quick/scenegraph/coreapi/qsgnode.h:138:35: note: passing argument to parameter 'node' here void appendChildNode(QSGNode *node); ^ qquickshapegenericrenderer.cpp:582:13: error: cannot initialize object parameter of type 'QSGNode' with an expression of type 'QQuickShapeGenericStrokeFillNode' n->markDirty(QSGNode::DirtyGeometry); ^ qquickshapegenericrenderer.cpp:591:13: error: cannot initialize object parameter of type 'QSGNode' with an expression of type 'QQuickShapeGenericStrokeFillNode' n->markDirty(QSGNode::DirtyMaterial); ^ qquickshapegenericrenderer.cpp:603:13: error: cannot initialize object parameter of type 'QSGNode' with an expression of type 'QQuickShapeGenericStrokeFillNode' n->markDirty(QSGNode::DirtyGeometry); ^ qquickshapegenericrenderer.cpp:613:9: error: cannot initialize object parameter of type 'QSGBasicGeometryNode' with an expression of type 'QQuickShapeGenericStrokeFillNode' n->setGeometry(g); ^ qquickshapegenericrenderer.cpp:623:5: error: cannot initialize object parameter of type 'QSGNode' with an expression of type 'QQuickShapeGenericStrokeFillNode' n->markDirty(QSGNode::DirtyGeometry); ^ qquickshapegenericrenderer.cpp:638:13: error: cannot initialize object parameter of type 'QSGNode' with an expression of type 'QQuickShapeGenericStrokeFillNode' n->markDirty(QSGNode::DirtyGeometry); ^ qquickshapegenericrenderer.cpp:643:5: error: cannot initialize object parameter of type 'QSGNode' with an expression of type 'QQuickShapeGenericStrokeFillNode' n->markDirty(QSGNode::DirtyGeometry); ^ fatal error: too many errors emitted, stopping now [-ferror-limit=] 20 errors generated. make[4]: *** [.obj/debug/qquickshapegenericrenderer.o] Error 1 make[3]: *** [debug-all] Error 2 make[2]: *** [sub-shapes-make_first] Error 2 ...
Qt Gui: EGL .................................... no OpenVG ................................. no OpenGL: Desktop OpenGL ....................... no OpenGL ES 2.0 ........................ no OpenGL ES 3.0 ........................ no OpenGL ES 3.1 ........................ no Vulkan ................................. no
- relates to
-
QTQAINFRA-1321 need to have -no-opengl build in general
-
- Closed
-
-
COIN-183 Add -no-opengl build configuration to CI
-
- Closed
-
For Gerrit Dashboard: QTBUG-61632 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
198463,4 | shapes: Convert QT_NO_OPENGL to QT_CONFIG(opengl) | dev | qt/qtdeclarative | Status: MERGED | -2 | 0 |