shapes: Convert QT_NO_OPENGL to QT_CONFIG(opengl)

Also guard fillGradient for now.

Task-number: QTBUG-61632
Change-Id: I5fa2607cc1ede0922519258afd455bee4d0187c7
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>