src/imports/shapes/qquickshapenvprrenderer_p.h
@@ -58,7 +58,7 @@
 #include <QVector4D>
 #include <QDebug>
 
-#ifndef QT_NO_OPENGL
+#if QT_CONFIG(opengl)
 
 QT_BEGIN_NAMESPACE
 
@@ -232,6 +232,6 @@ private:
 
 QT_END_NAMESPACE
 
-#endif // QT_NO_OPENGL
+#endif // QT_CONFIG(opengl)
 
 #endif // QQUICKSHAPENVPRRENDERER_P_H
